animation alignment fix

--- a/app/dev/sass/_config.scss
+++ b/app/dev/sass/_config.scss
@@ -246,7 +246,7 @@
     height: 12%;
     right: 0;
     margin: 0 auto;
-    top: 41%;
+    top: 42%;
 }
 
 @media only screen and (max-width: 856px){
